# BabsEngine

./: CMakeLists.txt  README.md  clean.sh  clear_project.sh  premake4.lua
src/: main.cpp
src/Algebra/: mat3.cpp  mat3.h  mat4.cpp  mat4.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/Utilities/: shell_colors.h
src/Viewer/: camera.cpp  camera.h  fragment.glsl  gl_version.h  glwidget.cpp  glwidget.h  glwidget_babs.cpp  glwidget_babs.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  shader.cpp  shader.h  vertex.glsl  window.cpp  window.h
tests/helloworld_c++11/: main.cpp
tests/helloworld_c++14/: main.cpp
tests/test_vec3/: main.cpp
